--- a/table.html
+++ b/table.html
@@ -107,6 +107,6 @@
             </tr>
         </tbody>
     </table>
-    <a href="./index.html">Go Back</a> 
+    <a href="./index2.html">Go Back</a> 
 </body>
 </html>
